--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -77,7 +77,7 @@
   font-size: 28px;
   cursor: pointer;
   z-index: 2000;
-
+  margin: 10px 0px 5px 10px;
   transition: transform 0.3s ease-in-out; /* Smooth rotation effect */
 }
 
