--- a/src/styles/Payment.css
+++ b/src/styles/Payment.css
@@ -5,7 +5,7 @@
   text-align: center;
   border-radius: 10px;
   background-color: #ffffff;
-  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border: 1px solid #c3c3c3;
 }
 
@@ -26,6 +26,7 @@
 .payment-options {
   list-style: none;
   padding: 0;
+  color: #555555;
   margin: 20px 0;
 }
 
@@ -38,7 +39,7 @@
   border-radius: 8px;
   margin-bottom: 15px;
   font-size: 18px;
-  color: #333;
+  color: #555555;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
   border: 1px solid #c3c3c3;
 }
